artificer/registry/ingress.yaml
---
# Source: docker-registry/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  labels:
    app: docker-registry
    chart: docker-registry-1.9.3
    release: master
    heritage: Helm
  annotations:
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/proxy-body-size: "30720m"
spec:
  rules:
    - host: registry.goblinwrangler.com
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry
              servicePort: 5000
  tls:
    - hosts:
      - registry.goblinwrangler.com
      secretName: docker-registry-tls
